# eve-nexus

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/scripts/: pre-remove.sh
src-tauri/src/: analytics.rs  lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: characters.rs  import.rs  inventory.rs  market.rs  mod.rs  plans.rs  sde.rs  settings.rs  solver.rs  updater.rs
src-tauri/src/db/: local.rs  mod.rs  sde.rs  updater.rs
src-tauri/src/esi/: endpoints.rs  mod.rs
src-tauri/src/solver/: cost.rs  invention.rs  mod.rs  node.rs
src-tauri/src/types/: mod.rs
src/api/: advisor.ts  blueprints.ts  characters.ts  eft.ts  hangar.ts  index.ts  jobs.ts  market.ts  overrides.ts  plans.ts  restock.ts  sde.ts  settings.ts  solver.ts  structures.ts  systems.ts  types.ts  updater.ts
src/components/advisor/: AdvisorPanel.css  AdvisorPanel.tsx
src/components/browser/: BlueprintBrowser.css  BlueprintBrowser.tsx
src/components/common/: Select.css  Select.tsx  SystemComparison.css  SystemComparison.tsx  SystemPicker.tsx  TypeIcon.css  TypeIcon.tsx  TypePicker.css  TypePicker.tsx  index.ts
src/components/graph/: BuildNodeCard.css  BuildNodeCard.tsx  GraphView.css  GraphView.tsx  layout.ts
src/components/grid/: GridView.css  GridView.tsx
src/components/monitoring/: MonitoringPanel.css  (+1 more)
src/lib/: buildCost.ts  export.ts  format.ts  useDraggable.ts
src/store/: characters.ts  index.ts  init.ts  market.ts  plan.ts  sde.ts  settings.ts  solver.ts  ui.ts
src/utils/: analytics.ts
src/views/: MarketView.css  MarketView.tsx  RestockView.css  RestockView.tsx
(+36 files in other folders)
